protobuf (3.12.3-2~bpo10+1pexip1) pexip; urgency=medium

  * New upstream release

 -- John-Mark Bell <jmb@pexip.com>  Thu, 08 Oct 2020 16:01:06 +0100

protobuf (3.12.3-2~bpo10+1) buster-backports; urgency=medium

  * Rebuild for buster-backports.
  * Lower debhelper-compat to 11 for dwz compatibility

 -- Pirate Praveen <praveen@debian.org>  Thu, 30 Jul 2020 09:17:15 +0000

protobuf (3.12.3-2) unstable; urgency=medium

  * Upload to Sid.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Wed, 08 Jul 2020 00:47:38 +0200

protobuf (3.12.3-1) experimental; urgency=medium

  * New upstream release.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sat, 06 Jun 2020 07:37:57 +0200

protobuf (3.12.2-1) experimental; urgency=medium

  * New upstream release.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Wed, 27 May 2020 07:01:59 +0200

protobuf (3.12.0-1) experimental; urgency=medium

  * New major upstream release.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sun, 17 May 2020 19:09:58 +0200

protobuf (3.12.0~rc1-1) experimental; urgency=medium

  * New major upstream release candidate version.
  * Update patches.
  * Library transition from libproto*22 to libproto*23 .

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sat, 09 May 2020 18:45:17 +0000

protobuf (3.11.4-5) unstable; urgency=medium

  [ Olek Wojnar <olek@debian.org> ]
  * Allow building of protobuf-java-util (closes: #958444).
  * Add no_errorprone.patch since dependency not available in Debian.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Tue, 05 May 2020 17:43:12 +0000

protobuf (3.11.4-4) unstable; urgency=medium

  * Update Python version for self-tests (closes: #937327).

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Fri, 10 Apr 2020 08:56:22 +0000

protobuf (3.11.4-3) unstable; urgency=medium

  * Python3ify examples.

 -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Tue, 24 Mar 2020 18:20:00 +0000

protobuf (3.11.4-2) unstable; urgency=medium

  * Upload to Sid (closes: #934665).
