@@ -1,6 +1,6 @@
 --- a/python/google/protobuf/json_format.py
 +++ b/python/google/protobuf/json_format.py
-@@ -536,8 +536,13 @@
+@@ -574,8 +574,13 @@
                if item is None:
                  raise ParseError('null is not allowed to be used as an element'
                                   ' in a repeated field.')
@@ -16,17 +16,17 @@
          elif field.cpp_type == descriptor.FieldDescriptor.CPPTYPE_MESSAGE:
            if field.is_extension:
              sub_message = message.Extensions[field]
-@@ -546,7 +551,12 @@
-           sub_message.SetInParent()
-           self.ConvertMessage(value, sub_message)
-         else:
--          setattr(message, field.name, _ConvertScalarFieldValue(value, field))
-+          try:
-+            setattr(message, field.name, _ConvertScalarFieldValue(value, field))
-+          except ParseError as e:
-+            if (field.cpp_type != descriptor.FieldDescriptor.CPPTYPE_ENUM or
-+                not self.ignore_unknown_fields):
-+              raise e
+@@ -587,7 +592,12 @@
+           if field.is_extension:
+             message.Extensions[field] = _ConvertScalarFieldValue(value, field)
+           else:
+-            setattr(message, field.name, _ConvertScalarFieldValue(value, field))
++            try:
++              setattr(message, field.name, _ConvertScalarFieldValue(value, field))
++            except ParseError as e:
++              if (field.cpp_type != descriptor.FieldDescriptor.CPPTYPE_ENUM or
++                  not self.ignore_unknown_fields):
++                raise e
        except ParseError as e:
          if field and field.containing_oneof is None:
-           raise ParseError('Failed to parse {0} field: {1}'.format(name, e))
+           raise ParseError('Failed to parse {0} field: {1}.'.format(name, e))
