@@ -1,6 +1,7 @@
 protobuf (3.12.3-2~bpo10+1pexip1) pexip; urgency=medium
 
   * New upstream release
+  * Refresh debian/patches/unknown_enums.patch
 
  -- John-Mark Bell <jmb@pexip.com>  Thu, 08 Oct 2020 16:01:06 +0100
 
